--- a/HomePage.html
+++ b/HomePage.html
@@ -33,7 +33,7 @@
         <div class="text">
             <h2>About This Website</h2>
             <p>Welcome to our Family Christmas Website! This website is a festive digital gathering place where we share the joy and warmth of the holiday season with our beloved family. Explore heartwarming stories, cherished traditions, and memorable moments captured in photos</p>
-            <p>Take a stroll down memory lane as we showcase delightful snapshots of past Christmases, sharing the laughter, love, and unique moments that make our family celebrations special. Each family member has their own dedicated section, allowing us to share a bit about their favorite holiday traditions, funny anecdotes, and what Christmas means to them.</p>
+            <p>Take a stroll down memory lane as we showcase delightful snapshots of past Christmases, sharing the laughter, love, and unique moments that make our family celebrations special. Each family member has their own dedicated section, allowing us to share a bit about themselves.</p>
         </div>
 
         <div class="image">
